--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -721,7 +721,8 @@
                             android:layout_height="wrap_content"
 
                             android:layout_toEndOf="@id/tv_sellerNumber_data"
-                            android:layout_marginStart="50dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_below="@id/tv_sellerNumber_data"
 
                             android:text="ask for number"
                             android:textColor="@color/light_blue_600"
@@ -817,45 +818,70 @@
 
             >
 
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="400dp"
                 android:layout_height="wrap_content"
 
-                android:text="AD ID : "
-                android:textColor="@color/black"
-                android:textSize="25sp"
+                android:id="@+id/adUID_layout_card"
 
-                android:layout_marginStart="10dp"
-
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_adUID"
-
-
-                android:textColor="@color/black"
-                android:textSize="25sp"
-
-                android:layout_marginStart="90sp"
-
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/adReport"
-
-                android:text="Report this AD"
-                android:textColor="@color/buttonColor"
-                android:textSize="20sp"
-                android:background="@drawable/white_curcle"
-                android:layout_marginTop="5dp"
-                android:layout_below="@id/tv_adUID"
+                card_view:cardBackgroundColor="#eeeeff"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="20dp"
+                android:layout_margin="16dp"
                 android:layout_centerHorizontal="true"
 
-                />
+                >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="AD ID : "
+                        android:textColor="@color/black"
+                        android:textSize="25sp"
+
+                        android:layout_marginStart="10dp"
+
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tv_adUID"
+
+
+                        android:textColor="@color/black"
+                        android:textSize="25sp"
+
+                        android:layout_marginStart="90sp"
+
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/adReport"
+
+                        android:text="Report this AD"
+                        android:textColor="@color/buttonColor"
+                        android:textSize="20sp"
+                        android:layout_marginTop="5dp"
+                        android:layout_below="@id/tv_adUID"
+                        android:layout_centerHorizontal="true"
+
+                        />
+
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
 
         </RelativeLayout>
 
