--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -12,7 +12,6 @@
         android:id="@+id/fragment_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary"
         android:layout_above="@id/bottom_nav"
         android:layout_marginBottom="1dp">
 
@@ -26,6 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="12dp"
         android:background="@color/napbar"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"
+        />
 
 </RelativeLayout>
