--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -12,8 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="240dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/contaact"
-        android:contentDescription="TODO"/>
+        android:src="@drawable/contact_iv"
+        android:contentDescription="TODO"
+
+
+        />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -25,7 +28,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:elevation="12dp">
+        android:elevation="12dp"
+        app:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -84,14 +88,17 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/cust_call"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="40dp"
                         android:layout_marginTop="10dp"
-                        android:text="6291526612"
+                        android:text="+91 6291526612"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"
-                        android:textSize="25sp" />
+                        android:textSize="25sp"
+                        android:autoLink="phone"
+                        />
 
 
                 </LinearLayout>
@@ -128,7 +135,9 @@
                         android:text="boiimela2023@gmail.com"
                         android:textColor="#0277BD"
                         android:textColorHighlight="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:autoLink="email"
+                        />
 
                 </LinearLayout>
 
@@ -160,45 +169,6 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <RelativeLayout
-                            android:id="@+id/imgProfile"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="250dp">
-
-                            <ImageView
-                                android:id="@+id/facebook"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:layout_centerVertical="true"
-                                android:src="@drawable/facebook" />
-
-                            <ImageView
-                                android:id="@+id/instagram"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:layout_marginLeft="55dp"
-                                android:contentDescription="TODO"
-                                android:src="@drawable/instagram" />
-
-                            <ImageView
-                                android:id="@+id/youtube"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:layout_marginLeft="110dp"
-                                android:contentDescription="TODO"
-                                android:src="@drawable/youtube" />
-
-                            <ImageView
-                                android:id="@+id/share"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:layout_marginLeft="165dp"
-                                android:contentDescription="TODO"
-                                android:src="@drawable/share" />
-
-                        </RelativeLayout>
-
                     </RelativeLayout>
 
                     <TextView
@@ -210,7 +180,9 @@
                         android:text="www.github.com/boiimela"
                         android:textColor="#0277BD"
                         android:textColorHighlight="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:autoLink="web"
+                        />
 
 
                 </LinearLayout>
@@ -223,6 +195,7 @@
                     android:background="@drawable/grey"
                     android:layout_below="@id/lin_3"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
                     />
 
 
